--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "A Model Context Protocol (MCP) server for DataHub"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "mcp[cli]>=1.3.0",
     "acryl-datahub==1.1.0",
+    "fastmcp==2.10.4",
     "jmespath~=1.0.1",
 ]
 license = "Apache-2.0"
