--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0"
 
 [dependency-groups]
 dev = [
+    "anyio>=4.9.0",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
     "ruff>=0.11.6",
