--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A Model Context Protocol (MCP) server for DataHub"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "acryl-datahub==1.1.0.5rc11",
+    "acryl-datahub==1.2.0",
     "fastmcp==2.10.5",
     "jmespath~=1.0.1",
 ]
