--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastmcp==2.10.5",
     "jmespath~=1.0.1",
     "loguru",
+    "pydantic>=2.0,<2.12",
 ]
 license = "Apache-2.0"
 
