--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,6 @@ jobs:
           # Test against longtail (Cloud instance)
           - test_env: "longtail"
             datahub_version: "cloud"
-          # Test against OSS v1.3.0 (latest stable)
-          - test_env: "oss"
-            datahub_version: "v1.3.0"
-          # Test against latest OSS (head)
-          - test_env: "oss"
-            datahub_version: "head"
       fail-fast: false
 
     steps:
@@ -82,7 +76,7 @@ jobs:
           DATAHUB_GMS_URL: ${{ secrets.LONGTAIL_GMS_URL }}
           DATAHUB_GMS_TOKEN: ${{ secrets.LONGTAIL_GMS_TOKEN }}
         run: |
-          uv run pytest tests/test_mcp_server.py -v
+          uv run pytest tests/test_mcp_integration.py -v
 
       - name: Run integration tests (OSS)
         if: matrix.test_env == 'oss'
@@ -90,7 +84,7 @@ jobs:
           DATAHUB_GMS_URL: "http://localhost:8080"
           DATAHUB_GMS_TOKEN: ""
         run: |
-          uv run pytest tests/test_mcp_server.py -v
+          uv run pytest tests/test_mcp_integration.py -v
 
       # Cleanup
       - name: Cleanup DataHub (OSS only)
