--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "cachetools>=5.0.0",
     "fastmcp==2.10.5",
     "jmespath~=1.0.1",
+    "json-repair",
     "loguru",
     "pydantic>=2.0,<2.12",
 ]
