--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
           datahub docker quickstart --version ${{ matrix.datahub_version }}
           datahub docker check
 
+      # Ingest and wait for ingestion to complete (OSS only)
       - name: Ingest sample data (OSS only)
         if: matrix.test_env == 'oss'
         env:
@@ -70,6 +71,7 @@ jobs:
         run: |
           datahub docker ingest-sample-data
           datahub ingest mcps tests/addon_bootstrap_mce.json
+          python scripts/wait_for_ingestion.py
 
       # Setup MCP server dependencies
       - name: Install uv
