--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,17 @@ name = "mcp-server-datahub"
 dynamic = ["version"]
 description = "A Model Context Protocol (MCP) server for DataHub"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-    "acryl-datahub==1.2.0.2",
+    "acryl-datahub>=1.3.1.7",
     "asyncer>=0.0.8",
     "cachetools>=5.0.0",
-    "fastmcp==2.10.5",
+    "fastmcp>=2.10.5",
     "jmespath~=1.0.1",
     "loguru",
     "pydantic>=2.0,<2.12",
+    "json-repair",
+    "google-re2",
 ]
 license = "Apache-2.0"
 
@@ -20,10 +22,15 @@ dev = [
     "anyio>=4.9.0",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.21.0",
     "ruff>=0.11.6",
     "types-cachetools",
     "types-jmespath~=1.0.1",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [project.urls]
 "Source" = "https://github.com/acryldata/mcp-server-datahub"
