--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ dependencies = [
     "acryl-datahub>=1.3.1.7",
     "asyncer>=0.0.8",
     "cachetools>=5.0.0",
-    "fastmcp>=2.10.5",
+    "fastmcp>=2.14.5,<3",
     "jmespath~=1.0.1",
     "loguru",
-    "pydantic>=2.0,<2.12",
+    "pydantic>=2.0,<3",
     "json-repair",
     "google-re2",
 ]
